Structs in arrays are not marshalled correctly

https://bugzilla.gnome.org/show_bug.cgi?id=602709